--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,56 +3,56 @@ version: "3"
 services:
   webserver:
     build: 
-      context: ./bin/${PHPVERSION}
-    container_name: '${COMPOSE_PROJECT_NAME}-${PHPVERSION}'
+      context: ./bin/php74
+    container_name: 'lamp-php74'
     restart: 'always'
     ports:
-      - "${HOST_MACHINE_UNSECURE_HOST_PORT}:80"
-      - "${HOST_MACHINE_SECURE_HOST_PORT}:443"
-    links: 
+      - "80:80"
+      - "443:443"
+    links:
       - database
-    volumes: 
-      - ${DOCUMENT_ROOT-./www}:/var/www/html
-      - ${PHP_INI-./config/php/php.ini}:/usr/local/etc/php/php.ini
-      - ${VHOSTS_DIR-./config/vhosts}:/etc/apache2/sites-enabled
-      - ${LOG_DIR-./logs/apache2}:/var/log/apache2
+    volumes:
+      - ./www:/var/www/html
+      - ./config/php/php.ini:/usr/local/etc/php/php.ini
+      - ./config/vhosts:/etc/apache2/sites-enabled
+      - ./logs/apache2:/var/log/apache2
     environment:
-      PMA_PORT: ${HOST_MACHINE_PMA_PORT}
+      PMA_PORT: 8080
   database:
     build:
-      context: "./bin/${DATABASE}"
-    container_name: '${COMPOSE_PROJECT_NAME}-database'
+      context: "./bin/mysql"
+    container_name: 'lamp-database'
     restart: 'always'
     ports:
-      - "127.0.0.1:${HOST_MACHINE_MYSQL_PORT}:3306"
-    volumes: 
-      - ${MYSQL_DATA_DIR-./data/mysql}:/var/lib/mysql
-      - ${MYSQL_LOG_DIR-./logs/mysql}:/var/log/mysql
+      - "127.0.0.1:3306:3306"
+    volumes:
+      - ./data/mysql:/var/lib/mysql
+      - ./logs/mysql:/var/log/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: tiger
+      MYSQL_DATABASE: docker
+      MYSQL_USER: docker
+      MYSQL_PASSWORD: docker
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: '${COMPOSE_PROJECT_NAME}-phpmyadmin'
+    container_name: 'lamp-phpmyadmin'
     links:
       - database
     environment:
       PMA_HOST: database
       PMA_PORT: 3306
-      PMA_USER: ${MYSQL_USER}
-      PMA_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      PMA_USER: docker
+      PMA_PASSWORD: docker
+      MYSQL_ROOT_PASSWORD: tiger
+      MYSQL_USER: docker
+      MYSQL_PASSWORD: docker
     ports:
-      - '${HOST_MACHINE_PMA_PORT}:80'
-    volumes: 
+      - '8080:80'
+    volumes:
       - /sessions
-      - ${PHP_INI-./config/php/php.ini}:/usr/local/etc/php/conf.d/php-phpmyadmin.ini
+      - ./config/php/php.ini:/usr/local/etc/php/conf.d/php-phpmyadmin.ini
   redis:
-    container_name: '${COMPOSE_PROJECT_NAME}-redis'
+    container_name: 'lamp-redis'
     image: redis:latest
     ports:
-      - "127.0.0.1:${HOST_MACHINE_REDIS_PORT}:6379"
+      - "127.0.0.1:6379:6379"
